--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Lexend:wght@500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Motors</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
